--- a/src/components/days/days.css
+++ b/src/components/days/days.css
@@ -5,10 +5,16 @@
 
 .day{
     margin: 1px;
-    padding: 5px 5px 20px;
-    height: 50px;
+    width: 100px;
+    height: 100px;
     background-color: lightgray;
     text-align:left;
+}
+
+.day > p{
+    position: absolute;
+    
+
 }
 .weekday{
     margin: 1px;
